squished two bugs: 1) <html> width wasn't always being defined well 2) fade in was loading before the images

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,8 +65,8 @@ $l-size: 80em;
 
 html {
   display: table; // OMG!! Not tables!
+  width: 100%;
   height: 100%;
-  margin: 0 auto;
 }
 
   body {
